avoid showing invisible text

--- a/public/fonts/Jokerman Std.css
+++ b/public/fonts/Jokerman Std.css
@@ -13,4 +13,5 @@
     font-style: normal;
     font-stretch: normal;
     unicode-range: U+0020-00FC;
+    font-display: swap;
 }
